Fix bug that was displaying the book covers disorganized

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -750,6 +750,9 @@ footer {
     background: #fff;
 }
 
+.book-cover {
+    min-height: 375px !important;
+}
 /*----------------- FLASHES -------------------*/
 .flashes {
     position: relative;
